Fix layout break of buttons in PJs section

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -144,7 +144,7 @@ header{
   text-decoration: none;
   transition: .3s;
   width: 30%;
-  min-width: 280px;
+  min-width: 240px;
   &:hover{
     background-color: #fff;
     color: $main-color;
